made the number of items in the cart dispalyed on the homepage dynamic

--- a/src/app.html
+++ b/src/app.html
@@ -25,7 +25,7 @@
         </nav>
         <a @click="toggleSidebar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
-          <span>Cart (0)</span>
+          <span>Cart ({{ totalQuantity }})</span>
         </a>
       </header>
 
@@ -104,6 +104,13 @@
             showSidebar: false,
             inventory: [],
             cart: {}
+          }
+        },
+        computed: {
+          totalQuantity() {
+            return Object.values(this.cart).reduce((acc, curr) => {
+              return acc + curr;
+            }, 0)
           }
         },
         methods: {
